
Fixed: Issue #241: Add the User-Agent header in the http protocol test only if
it is not part of custom headers list and allow single quotes for the value.

Fixed: Issue #221: If check host has no tests enabled, provide clear error message.

Fixed: Issue #223: Don't log "Error reading pid from ..." for non-process checks on
stop/restart.

Fixed: Issue #226: Monit hung during ping test.

Fixed: Compilation with SSL when SSLv3 is disabled in the SSL library.

Fixed: Don't log error if SSL SNI is not supported by server.

Fixed: SSL client certificate authentication.


Version 5.14

New: Enable HTTP Strict Transport Security (HSTS) on Monit HTTP interface if
SSL is enabled.

New: Enable ECDH ciphers for Monit HTTP interface.

New: The SSL IDEA ciphers are disabled now.

New: Added simpler system-wide cpu usage test (total of user%, system%, wait%). Example:
        if cpu usage > 99% then alert

New: Issue #202: Added support for restricting the command-line "monit status" and "monit summary"
only to a certain service or service group. For example:
        monit status apache  # show status of "apache" service
        monit -g www status  # show status of "www" service group

New: MySQL protocol test now supports authentication (optional). Usage:
    if failed port 3306 protocol mysql username myuser password mypassword then alert

New: Issue #208: log client address in case of HTTP request error.

New: Issue #206: report monit version in the instance start/stop message.

Fixed: Issue #98: MySQL test might blocked the host because of too many
connection errors.


Version 5.13

New: Issue #187: Added support for free space and free inodes monitoring as an
alternative to current space/inodes usage monitoring. Both absolute number of
bytes and percent limit forms are supported. For example to check that the
filesystem has at minimum 10GB left:
    if space free < 10 GB then alert

New: Issue #190: Add support for ServerNameIndication TLS extension to support