@@ -31,6 +31,9 @@ stop/restart.
 
 Fixed: Issue #226: Monit hung during ping test.
 
+Fixed: Issue #248: Don't cascade start action to dependant services if only parent start was
+requested.
+
 Fixed: Compilation with SSL when SSLv3 is disabled in the SSL library.
 
 Fixed: Don't log error if SSL SNI is not supported by server.
